# CMPR121_FINAL

./: .gitignore  CMakeLists.txt  README.md
.run/: CMPR121_FINAL.run.xml
Resources/: Candidate_data.txt
Specification/: spec.txt
UML/: diagrams.txt
source/: PersonType.cpp  PersonType.h  main.cpp
source/CandidateList/: CandidateList.cpp  CandidateList.h
source/CandidateLoader/: CandidateLoader.cpp  CandidateLoader.h
source/CandidateType/: CandidateType.cpp  CandidateType.h
source/InputHandler/: InputHandler.cpp  InputHandler.h
source/Node/: Node.cpp  Node.h
source/PersonType/: PersonType.cpp  PersonType.h
